refactor: extract modal components from inventory-form

--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint",
     "db:generate": "drizzle-kit generate",
     "db:migrate": "drizzle-kit migrate",
-    "db:studio": "drizzle-kit studio"
+    "db:studio": "drizzle-kit studio",
+
+    "setup:db": "node -e \"fetch('http://localhost:3000/api/seed', {method: 'POST'}).then(r => r.json()).then(console.log)\""
   },
   "dependencies": {
     "@neondatabase/serverless": "^0.10.1",
